position overflow bug

--- a/css/shapebar.css
+++ b/css/shapebar.css
@@ -1,6 +1,6 @@
 #shapebar {
 	position: relative;
-	top: 0px;right: 0px;height: 100%;z-index: 0;
+	top: 0px;right: 0px;height: -webkit-calc(100% - 15px);z-index: 0;
 	border-left: 1px solid black;background-color: rgba(0,0,0,0.1);z-index: 700;
 	padding: 0 15px;
 	padding-top: 15px;
