--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -3,7 +3,7 @@
     left: 0px;
     top: 0px;
     z-index: 700;
-    height: 100%;
+    height: -webkit-calc(100% - 15px);
     border-right: 1px solid rgba(0,0,0,1);
     background-color: rgba(0,0,0,0.1);
     padding: 0  15px;
